lab 6 zad 2